<resources>
    <string name="app_name">LoginOTPproject</string>
    <string name="we_will_send_otp_on_this_number">We will send OTP on this Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="get_otp">GET OTP</string>
    <string name="please_enter_the_otp_sent_to_you">Please Enter the OTP sent to you</string>
    <string name="dashboard_screen">DashBoard Screen</string>
    <string name="_6207590073">6207590073</string>
</resources>